syntax = "proto3";
package com.odc.recipient.v1;

option java_multiple_files = true;
option java_package = "com.odc.company.v1";
option java_outer_classname = "UserServiceProto";

import "event_models/notification_event.proto";

service RecipientResolverService {
  rpc ResolveRecipients(ResolveRecipientsRequest) returns (ResolveRecipientsResponse);
}

message ResolveRecipientsRequest {
  com.odc.notification.v1.Target target = 1;
}

message ResolveRecipientsResponse {
  repeated string user_ids = 1;
}
